			   XPCE ChangeLog
			   ==============

VERSION 6.2.9, distributed with SWI-Prolog 5.2.9
================================================

* FIXED: Frame area computation in MS-Windows to use AdjustWindowRectEx(). 
  Fixes layout problems in Windows XP.

* ADDED: in_pce_thread/1 to support the model of XPCE running in the foreground
  and make background threads interact synchronously with it.

* FIXED/MODIFIED: `node->image' now use ->destroy to destroy the old image.
  The new image is immediately connected to the tree so <-contained works.

* FIXED: `event->inside' for windows that are not the receiver of the event.

* PORT: manual installation according to the GNU make/autoconf guidelines.
  Andreas Voegele.

* MODIFIED: library(pce_unclip) to detach if the pointer leaves the original
  window.  Avoids event processing problems.

* PORT: Socket library tests for IRIX 6.5.  Rob Myers.

* FIXED: Demo ispell file-open (Kip Rugger).

* FIXED: Crash in button->redraw if the button was nost displayed in a
  window (i.e. `image->draw_in').  Lourens van der Meij.

* FIXED/ADDED/MODIFIED: Fixed loc_still generation if loc_move handling
  created other events.  Added class-variable loc_still_time to class
  event to specify the time and modified the default to 400ms (was 700ms).

* ADDED: `table_cell->image' to replace the image in a cell while keeping
  the same cell.

* FIXED: Class text_item modified propagation for ->paste.  Also provide
  real modified status for normal edit.

* FIXED: `node->collapsed' for indented-list trees on the <-display_root
  (screen update problem).

* FIXED: handling of `tree->heighbour_gap' in `list' mode.

* FIXED: `node->move_after' to succeed silently if the node is already the
  last.

* FIXED: redraw problems in class tree (using ->direction: list) when moving
  nodes between branches.

* FIXED: keyboard focus handling in class frame to use ->post_event.  Also